<resources>
    <string name="app_name">MaximaTechTest</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Client Fragment -->
    <string name="cpf">CPF</string>
    <string name="cnpj">CNPJ</string>
    <string name="activity_branch">Ramo de atividade: </string>
    <string name="address">Endereços: </string>

    <!-- Contact Widget -->
    <string name="phone">Telefone: </string>
    <string name="spouse">Cônjuge: </string>
    <string name="type">Tipo: </string>
    <string name="hobby">Hobbie: </string>
    <string name="cell_phone">Celular: </string>
    <string name="email">Email: </string>
    <string name="date_birth">Data de nascimento: </string>
    <string name="date_birth_spouse">Data de nascimento cônjuge: </string>
    <string name="team">Time: </string>
</resources>