<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".client.presentation.ClientFragment">

    <LinearLayout
        android:id="@+id/scroll_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_client_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_marginEnd="@dimen/default_margin">

                <TextView
                    android:id="@+id/card_client_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Dados do cliente"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:id="@+id/line_separator_1"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/card_client_title" />

                <TextView
                    android:id="@+id/card_client_company_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small_margin"
                    android:fontFamily="@font/santral_bold"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/line_separator_1"
                    tools:text="40.795 - A E D REMEDIOS E PERFUMARIA - EIRELI - M" />

                <TextView
                    android:id="@+id/card_client_fantasy_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small_margin"
                    android:fontFamily="@font/santral_bold"
                    android:textColor="@color/color_text_fantasy_name"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/card_client_company_name"
                    tools:text="Drogaria Campestre" />

                <com.saad.maximatechtest.widget.UserInformationWidget
                    android:id="@+id/card_client_cpf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/medium_margin"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/card_client_fantasy_name"
                    app:userInfomationLabel="@string/cpf" />

                <com.saad.maximatechtest.widget.UserInformationWidget
                    android:id="@+id/card_client_cnpj"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/medium_margin"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/card_client_cpf"
                    app:userInfomationLabel="@string/cnpj" />

                <com.saad.maximatechtest.widget.UserInformationWidget
                    android:id="@+id/card_client_activity_branch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/medium_margin"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/card_client_cnpj"
                    app:userInfomationLabel="@string/activity_branch" />

                <com.saad.maximatechtest.widget.UserInformationWidget
                    android:id="@+id/card_client_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/medium_margin"
                    android:layout_marginBottom="@dimen/big_margin"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/card_client_activity_branch"
                    app:userInfomationLabel="@string/address" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_marginEnd="@dimen/default_margin">

                <TextView
                    android:id="@+id/card_contact_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Contatos"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:id="@+id/line_separator_2"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/card_contact_title" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/container_contacts"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_margin"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/line_separator_2" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>


    </LinearLayout>

</androidx.core.widget.NestedScrollView>